# ai-task-planner

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  run.bat
core/: scheduler.py
data/: mock_templates.json
docs/: architecture.md  demo_script.md  scoring_checklist.md
graph/: builder.py  edges.py  nodes.py  state.py
llm/: client.py  prompts.py
tests/: test_validation.py
tests/tests/: test_scheduler.py
ui/: components.py  formatters.py  handlers.py
utils/: storage.py  validation.py
