[project]
name = "ai-task-planner"
version = "0.1.0"
description = "AI task planner bot for students built with Chainlit, LangGraph, and OpenAI."
authors = [
  { name = "Hackathon Team" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "python-dotenv>=1.0.0",
  "langgraph>=0.2.45",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-ollama>=0.2.0",
  "langchain-openai>=0.3.0",
  "chainlit>=2.8.3",
  "pydantic>=2.0.0",
  "typing-extensions>=4.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
